force-app/main/default/objects/Especies_de_plantas__c/Especies_de_plantas__c.object-meta.xml
<CustomObject>
    <label>Especies de plantas</label>
    <nameField>
        <label>Nombre de la Especie</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Especies de plantas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>