force-app/main/default/objects/Especies_de_plantas__c/fields/Antonio__c.field-meta.xml
<CustomField>
    <fullName>Antonio__c</fullName>
    <label>Antonio</label>
    <length>14</length>
    <type>Text</type>
</CustomField>