force-app/main/default/objects/Especies_de_plantas__c/fields/Temperatura_ideal_maxima__c.field-meta.xml
<CustomField>
    <fullName>Temperatura_ideal_maxima__c</fullName>
    <label>Temperatura ideal maxima</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>