force-app/main/default/objects/Especies_de_plantas__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Comestible</fullName>
                <default>true</default>
                <label>Comestible</label>
            </value>
            <value>
                <fullName>Ornamental</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>